Import of TOKUHIROM/ThaiSchema-0.02 from CPAN.
gitpan-cpan-distribution: ThaiSchema
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TOKUHIROM/ThaiSchema-0.02.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension ThaiSchema
 
+0.02
+
+    - fixed documentation bug
+
 0.01    Wed Nov 14 09:30:02 2012
     - original version
