Import of TOKUHIROM/ThaiSchema-0.03 from CPAN.
gitpan-cpan-distribution: ThaiSchema
gitpan-cpan-version:      0.03
gitpan-cpan-path:         TOKUHIROM/ThaiSchema-0.03.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension ThaiSchema
 
+0.03
+
+    - bug fixed in Test::ThaiSchema. It's not works in 0.02-
+
 0.02
 
     - fixed documentation bug
