Import of TOKUHIROM/ThaiSchema-0.05 from CPAN.
gitpan-cpan-distribution: ThaiSchema
gitpan-cpan-version:      0.05
gitpan-cpan-path:         TOKUHIROM/ThaiSchema-0.05.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension ThaiSchema
 
+0.05
+
+    - [JSON] allow raw hashref as schema.
+
 0.04
 
     - support validating json directly.
