Import of TOKUHIROM/ThaiSchema-0.06 from CPAN.
gitpan-cpan-distribution: ThaiSchema
gitpan-cpan-version:      0.06
gitpan-cpan-path:         TOKUHIROM/ThaiSchema-0.06.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension ThaiSchema
 
+0.06
+
+    - fixed 'maybe' validation in JSON validation.
+    - throw exception when parser can't continue parsing
+
 0.05
 
     - [JSON] allow raw hashref as schema.
