Import of TOKUHIROM/ThaiSchema-0.07 from CPAN.
gitpan-cpan-distribution: ThaiSchema
gitpan-cpan-version:      0.07
gitpan-cpan-path:         TOKUHIROM/ThaiSchema-0.07.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension ThaiSchema
 
+0.07
+
+    - bug fix: thaischema::json cannot detect missing keys
+
 0.06
 
     - fixed 'maybe' validation in JSON validation.
